[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/coolness.gd" type="Script" id=1]
[ext_resource path="res://scenes/Arena/gear_shift.gd" type="Script" id=2]
[ext_resource path="res://scenes/Arena/Control.gd" type="Script" id=3]
[ext_resource path="res://scenes/Arena/guage.gd" type="Script" id=4]
[ext_resource path="res://fonts/troika.otf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/UI/lifebar_fill.png" type="Texture" id=6]
[ext_resource path="res://sounds/tread.wav" type="AudioStream" id=7]
[ext_resource path="res://sprites/UI/slider_grabber.png" type="Texture" id=8]
[ext_resource path="res://sounds/gear.wav" type="AudioStream" id=9]
[ext_resource path="res://sprites/UI/lifebar_bg.png" type="Texture" id=10]
[ext_resource path="res://sprites/UI/slider_area.png" type="Texture" id=11]
[ext_resource path="res://scenes/count.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=2]
texture = ExtResource( 11 )
region_rect = Rect2( 0, 0, 16, 64 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bars" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 221.0
margin_bottom = 240.0

[node name="bar" type="HBoxContainer" parent="HBoxContainer/bars"]
margin_right = 221.0
margin_bottom = 28.0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/bars/bar"]
margin_right = 150.0
margin_bottom = 28.0
rect_min_size = Vector2( 125, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guage" type="TextureProgress" parent="HBoxContainer/bars/bar/MarginContainer"]
margin_right = 150.0
margin_bottom = 28.0
rect_min_size = Vector2( 150, 15 )
value = 50.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="count" type="Label" parent="HBoxContainer/bars/bar"]
margin_left = 154.0
margin_right = 167.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "0"
script = ExtResource( 12 )

[node name="coolness" type="Label" parent="HBoxContainer/bars/bar"]
margin_left = 171.0
margin_right = 221.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "wow"
script = ExtResource( 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -128.0
margin_right = 80.0
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gear_shift" type="VSlider" parent="HBoxContainer2"]
margin_top = 32.0
margin_right = 32.0
margin_bottom = 96.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_icons/grabber_disabled = ExtResource( 8 )
custom_icons/grabber_highlight = ExtResource( 8 )
custom_icons/grabber = ExtResource( 8 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
max_value = 1.0
step = 0.01
value = 1.0
editable = false
tick_count = 3
ticks_on_borders = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioGearShift" type="AudioStreamPlayer" parent="HBoxContainer2/gear_shift"]
stream = ExtResource( 9 )
bus = "Sounds"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer2"]
margin_left = 36.0
margin_top = 39.0
margin_right = 48.0
margin_bottom = 89.0
size_flags_horizontal = 8
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="R_label" type="Label" parent="HBoxContainer2/VBoxContainer"]
margin_right = 12.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "R"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="D_label" type="Label" parent="HBoxContainer2/VBoxContainer"]
margin_top = 27.0
margin_right = 12.0
margin_bottom = 50.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "D"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioEngine" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -20.0
pitch_scale = 1.5
bus = "Sounds"

[connection signal="enemy_died" from="." to="HBoxContainer/bars/bar/coolness" method="_on_Control_enemy_died"]
[connection signal="enemy_died" from="." to="HBoxContainer/bars/bar/count" method="_on_Control_enemy_died"]
[connection signal="health_change" from="." to="HBoxContainer/bars/bar/MarginContainer/guage" method="_on_Control_health_change"]
[connection signal="steer_change" from="." to="HBoxContainer2/gear_shift" method="_on_Control_steer_change"]
[connection signal="goToRoom" from="HBoxContainer/bars/bar/count" to="." method="_on_count_goToRoom"]
